--- a/index.html
+++ b/index.html
@@ -45,22 +45,20 @@
     <p>To get started with Novl, simply create an account. You can sign up or sign in using your email and password. Once logged in, you can track your books, favorite authors, and explore personalized recommendations. If you ever need to reset your password, you can do so directly in the app using the "Forgot my password" option.</p>
 
     <h2>Contact Us</h2>
-    <p>If you need assistance with your account, data, or app functionality, please feel free to reach out. You can contact us via email at <a href="mailto:support@novlapp.com">support@novlapp.com</a>. We will do our best to respond promptly.</p>
+    <p>If you need assistance with your account, data, or app functionality, please feel free to reach out. You can contact us via email at <a href="mailto:admin@irrationaltechnology.com">admin@irrationaltechnology.com</a>. We will do our best to respond promptly.</p>
 
     <h2>Legal Information</h2>
     <p>Novl is a book tracking and discovery application that allows users to store, explore, and manage their reading activities. Your personal data, including your account information, books read, and preferences, is stored securely and privately. As the developer, we do not access your private book lists or personal data beyond what you choose to share.</p>
     <p>Novl does not endorse or support any illegal activities. Any information provided, including book summaries or images from sources such as OpenLibrary, is for informational purposes only. All trademarks, logos, and brand names referenced in Novl belong to their respective owners. The use of such names or logos is strictly for identification and informational purposes.</p>
 
     <h2>Account Deletion</h2>
-    <p>You can delete your Novl account directly in the app via your profile settings. If you prefer, you can also contact us at <a href="mailto:support@novlapp.com">support@novlapp.com</a> to request account deletion.</p>
+    <p>You can delete your Novl account directly in the app via your profile settings. If you prefer, you can also contact us at <a href="mailto:admin@irrationaltechnology.com">admin@irrationaltechnology.com</a> to request account deletion.</p>
 
     <h2>Privacy Policy</h2>
     <p>Your privacy is our priority. Novl only stores data that you explicitly provide or generate within the app. We do not sell or share your personal information with third parties. All book lists, reading history, and preferences are securely stored and only used to improve your experience. Location data is not collected, and we do not have access to private content on your device.</p>
 
     <p>Kind Regards,<br>
     Lead Developer, Novl</p>
-
-  <p>Contact Email: admin@irrationaltechnology.com</p>
 
 </body>
 </html>
